service.yaml
# templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-for-johnpaul-app
spec:
  type: LoadBalancer
  selector:
    app: johnpaul-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2368
